# ttrpg-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pytest.ini
.pi/: mcp.json  settings.json
.pi/agents/: creative-curator.md  creative-ideator.md  ingest-worker.md  researcher.md  statblock-converter.md
.pi/chains/: creative-brainstorm.chain.json
.pi/cli/book-ingest/: README.md  pyproject.toml
.pi/cli/book-ingest/src/book_ingest/: __init__.py  __main__.py  config.py  converter.py  marker_run.py  models.py  notes.py  overview.py  pipeline.py  planner.py  summarize.py  system_classify.py  tag.py  validate.py
.pi/cli/book-ingest/tests/: test_cli_followons.py  test_config.py  test_marker_run.py  test_notes.py  test_planner_e2e.py  test_validate.py
.pi/cli/foundry-mcp/: README.md  bootstrap.cjs  install.sh  preload.cjs  run.sh  smoke-test.mjs  smoke-test.sh
.pi/cli/image-gen/: README.md  pyproject.toml
.pi/cli/image-gen/src/image_gen/: __init__.py  __main__.py
.pi/cli/image-gen/tests/: test_image_gen.py
.pi/cli/vault-sync/: README.md
.pi/cli/vault-sync/src/vault_sync/: __init__.py
.pi/conditional-skills/ttrpg-wsl-sync/: SKILL.md
.pi/conditional-skills/ttrpg-wsl-sync/scripts/: sync.sh
.pi/extensions/: ttrpg-sync-skills.ts
.pi/extensions/image-gen/: README.md  image-gen.js  image-gen.test.js  index.ts  package.json
.pi/extensions/query-5etools/: README.md  index.ts  package.json  query-5etools.js
.pi/extensions/vault-frontmatter/: README.md  index.ts  package-lock.json  package.json  vault-frontmatter.js  vault-frontmatter.test.js
.pi/prompts/: bootstrap.md  cleanup.md  convert-monster.md  find-anything.md  find-monster.md  foundry-monster.md  illustrate.md  ingest-book.md  npc.md  readaloud.md
.pi/scripts/: pi-isolated.sh  pi-launch.sh  pi-shell.sh  qmd-init.sh
.pi/skills/creative-brainstorm/: SKILL.md
.pi/skills/ttrpg-campaign-design/: SKILL.md
.pi/skills/ttrpg-campaign-design/references/: factions-and-consequences.md  mysteries-and-information.md  situations.md  sources.md  world-state.md
.pi/skills/ttrpg-create-image-gen/: SKILL.md
.pi/skills/ttrpg-create-readaloud/: SKILL.md
.pi/skills/ttrpg-foundry-dnd5e-wiki/: SKILL.md
.pi/skills/ttrpg-foundry-enrichers/: SKILL.md
.pi/skills/ttrpg-foundry-mcp/: SKILL.md
.pi/skills/ttrpg-foundry-statblock-importer/: SKILL.md
.pi/skills/ttrpg-import-archive-vault/: SKILL.md
.pi/skills/ttrpg-import-book-pdf/: SKILL.md
.pi/skills/ttrpg-import-raw-pdf/: SKILL.md
.pi/skills/ttrpg-library-search/: SKILL.md
.pi/skills/ttrpg-research-web/: SKILL.md
.pi/skills/ttrpg-rules-5etools-native/: SKILL.md
.pi/skills/ttrpg-rules-5etools-query/: SKILL.md
.pi/skills/ttrpg-rules-osr-to-5e/: SKILL.md
.pi/skills/ttrpg-system-data-cleanup/: SKILL.md
.pi/skills/ttrpg-system-qmd-maintenance/: SKILL.md
.pi/skills/ttrpg-tag-book-manual/: SKILL.md
.pi/skills/ttrpg-vault-authoring/: SKILL.md
.pi/skills/ttrpg-vault-canvas/: SKILL.md
.pi/skills/ttrpg-vault-canvas/scripts/: validate-canvas.mjs
.pi/skills/ttrpg-vault-navigation/: SKILL.md
.pi/skills/ttrpg-vault-rich-notes/: SKILL.md
.ttrpg/scripts/: pi-isolated.sh  pi-launch.sh  pi-shell.sh  qmd-init.sh
.ttrpg/tools/book-ingest/: README.md  pyproject.toml
.ttrpg/tools/book-ingest/src/book_ingest/: models.py  notes.py  pipeline.py  validate.py
.ttrpg/tools/book-ingest/tests/: test_marker_run.py  test_planner.py
.ttrpg/tools/image-gen/: README.md
.ttrpg/tools/image-gen/src/image_gen/: __main__.py
.ttrpg/tools/image-gen/tests/: test_image_gen.py
.ttrpg/tools/vault-sync/: README.md  pyproject.toml
.ttrpg/tools/vault-sync/src/vault_sync/: __main__.py
.ttrpg/tools/vault-sync/tests/: test_vault_sync.py
