[project]
name = "image-gen"
version = "0.0.1"
description = "Image generation stub. Disabled by default; lowest priority."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "openai>=2.0",
]

[project.scripts]
image-gen = "image_gen.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_gen"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
