[project]
name = "vault-sync"
version = "0.1.0"
description = "Safe, explicit copies from imports/source-vault/ to vault/notes/ with no semantic routing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
]

[project.scripts]
vault-sync = "vault_sync.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_sync"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
